# windiff

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
.claude/skills/windiff-version-diff-analysis/: SKILL.md
.claude/skills/windiff-version-diff-analysis/evals/: evals.json
.claude/skills/windiff-version-diff-analysis/references/: report-template.md  windows-components.md  windows-internals.md
.claude/skills/windiff-version-diff-analysis/scripts/: make_config.py  windiff_diff.py
.github/workflows/: release.yml  rust.yml  scheduled.yml  typescript.yml
ci/: build_frontend.sh  db_configuration.json  fetch_update.py  requirements.fetch_update.txt
docs/: README.md  binary_download.md  binary_public_interfaces.md  kernel_user_interface.md
docs/claude_report_example/: ntoskrnl_25H2_to_26H1.md
plans/: filter-binaries-without-types.md
windiff_cli/: Cargo.toml
windiff_cli/src/: cli.rs  configuration.rs  database.rs  download.rs  error.rs  main.rs  pdb.rs  resym_frontend.rs  syscalls.rs  winbindex.rs
windiff_frontend/: .gitignore  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  tsconfig.json
windiff_frontend/src/app/: about.tsx  combobox.tsx  data_explorer.tsx  diff_explorer.tsx  file_explorer.tsx  layout.tsx  listbox.tsx  navbar.tsx  options_menu.tsx  page.tsx  permalink.ts  switch.tsx  tabs.tsx  windiff_types.ts
